--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,224 +1,7 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
-
-$major-color: #CE1D05;
-$safe-color: #4CA614;
-$light-color: #9A9A9A;
-
-$header-height: 90px;
-$fse-font-small: 10px;
-$fse-font-normal: 12px;
-$fse-font-large: 18px;
-$fse-font-extra-large: 20px;
-
-
-a {
-  color: $major-color;
-}
-
-.nav-tabs {
-  > li {
-    > a {
-      color: $major-color;
-      border: 0px solid transparent;
-      border-radius: 0px;
-      line-height: 20px;
-      &:hover {
-        color: lighten($major-color, 30);
-        border-color: transparent;
-      }
-    }
-
-    &.active > a {
-      &,
-      &:hover,
-      &:focus {
-        color: #fff;
-        background-color: $major-color;
-        border: 1px solid $major-color;
-        border-bottom-color: transparent;
-      }
-    }
-  }
-}
-
-.nav-tabs {
-  border-bottom: 1px solid $major-color;
-}
-
-.btn-search {
-  @include button-variant(white, $major-color, white);
-  width: 100%
-}
-
-.one-line-background {
-  width: 100%;
-  height: 5px;
-  position:absolute;
-  float: left;
-  top: $header-height - 5px;
-  background-color: $major-color;
-}
-
-.header {
-  height: $header-height - 30px;
-  margin-bottom: 30px;
-  h1 {
-    font-size: 24px;
-    margin-top: 30px;
-    color: $major-color;
-  }
-}
-
-.sidebar {
-  @extend .col-xs-12;
-  @extend .col-sm-4;
-  margin-bottom: 30px;
-  .tab-content {
-    margin-top: $padding-base-vertical;
-  }
-}
-
-.price-search {
-  margin-top: 30px;
-  .left {
-    float: left;
-  }
-  .right {
-    float: right;
-    text-aligh: right;
-  }
-}
-
-#price-search-slider {
-  width: 90%;
-  margin-left: 5%;
-  .slider-selection {
-    background: $major-color;
-  }
-  .slider-track-low, .slider-track-high {
-    background-color: $light-color;
-  }
-}
-
-$order-padding-top: 15px;
-
-.search-result {
-  @extend .col-xs-12;
-  @extend .col-sm-8;
-
-  .header{
-    @extend .col-xs-7;
-    margin-bottom: 0px;
-    h4 {
-      color: $light-color;
-    }
-  }
-
-  .summary {
-    @extend .col-xs-5;
-    text-align: right;
-    font-size: $fse-font-normal;
-    margin-top: 10px;
-    color: $light-color;
-    .date {
-      color: $major-color;
-    }
-  }
-
-  .orders {
-    .order {
-      @extend .row;
-      margin-bottom: 20px;
-
-
-      @media screen and (max-width: 750px) {
-        border-bottom: 1px solid #ddd;
-
-        .airline-logo {
-          img {
-            width: 40px;
-          }
-        }
-      }
-
-      .airline-logo {
-        @extend .col-xs-1;
-        @extend .col-sm-2;
-        @extend .col-md-2;
-        margin-top: $order-padding-top;
-      }
-      .go-back-flight {
-        @extend .col-xs-6;
-        @extend .col-sm-4;
-        @extend .col-md-5;
-        .go-flight, .back-flight {
-          float: left;
-          margin-left: 20px;
-          margin-bottom: 10px;
-        }
-      }
-      .flight-id {
-        font-size: $fse-font-small;
-        color: $light-color;
-      }
-      .flight-location {
-        font-size: $fse-font-large;
-      }
-      .flight-time {
-        font-size: $fse-font-normal;
-        color: $light-color;
-      }
-      .price {
-        @extend .col-xs-5;
-        @extend .col-sm-2;
-        @extend .col-md-2;
-        font-size: $fse-font-large;
-        text-align: right;
-        padding-top: $order-padding-top;
-      }
-      .select {
-        @extend .col-xs-5;
-        @extend .col-sm-4;
-        @extend .col-md-3;
-        text-align: right;
-        padding-top: $order-padding-top;
-        a, .barcode {
-          border-radius: 4px;
-          background-color: $safe-color;
-          color: #fff;
-          padding: 5px 10px;
-          display: inline-block;
-          font-size: $fse-font-normal;
-        }
-        .barcode {
-          width:20px;
-          padding: 5px 10px 5px 6px;
-        }
-      }
-    }
-  }
-}
-
-
-
-@media screen and (min-width: 992px) {
-  .container {
-    max-width: 970px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
-}
-
-
+@import 'general';
+@import 'header';
+@import 'price_select';
+@import 'side_bar';
+@import 'search_result';
